# etude-fastapi

./: .gitignore  Dockerfile  constraints.txt  pyproject.toml  samconfig.toml  setup.cfg  template_dev.yaml
.github/workflows/: dev.yml
src/: run.py
src/etude_fastapi/: main.py  models.py
